--- a/samplechart.html
+++ b/samplechart.html
@@ -49,6 +49,9 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
   </head>
   <body style="font-family: Arial;border: 0 none;">
     <div id="visualization" style="width: 500px; height: 400px;"></div>
+	<div id="visualization" style="width: 500px; height: 400px;"></div>
+	<div id="visualization" style="width: 500px; height: 400px;"></div>
+	<div id="visualization" style="width: 500px; height: 400px;"></div>
   </body>
 </html>
 ?
