--- a/sample.html
+++ b/sample.html
@@ -17,4 +17,6 @@
  <div id="opener"><a href="#1" name="1" onclick="return show();">click here</a></div> 
     <div id="benefits" style="display:none;">some input in here plus the close button 
            <div id="upbutton"><a onclick="return hide();">click here</a></div> 
+		   <div id="upbutton"><a onclick="return hide();">click here</a></div> 
+		   <div id="upbutton"><a onclick="return hide();">click here</a></div> 
     </div>
